# AI-Trader

./: asharereadme.txt  requirements.txt
asharemarket50/: README.md  __init__.py  data_loader.py  indicators.py  pipeline.py  pyproject.toml
asharemarket50/agents/: __init__.py  coordinator.py  policy.py
asharemarket50/agents/prompts/: csi50_multi_agent_prompt.md
asharemarket50/cli/: run_backtest.py
asharemarket50/configs/: __init__.py  settings.py  universe.py  universe_csi50.json
asharemarket50/core/: __init__.py  backtester.py  data_feed.py  indicators.py  performance.py  portfolio.py
asharemarket50/docs/: comparison.md
asharemarket50/prompts/: a50_agent_prompt.md
asharemarket50/services/: __init__.py  akshare_client.py
asharemarket50/tests/: test_performance.py
