[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asharemarket50"
version = "0.1.0"
description = "CSI 50 multi-agent trading simulator built on AKShare and T+1 execution."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI-Trader Contributors" }
]
dependencies = [
  "akshare>=1.13.98",
  "pandas>=2.1.0",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=23.0",
  "mypy>=1.8",
]

[project.scripts]
ashare50-backtest = "asharemarket50.cli.run_backtest:main"

[tool.setuptools.packages.find]
include = ["asharemarket50", "asharemarket50.*"]
exclude = ["asharemarket50.tests*", "asharemarket50.docs*", "asharemarket50.assets*"]
